--- a/.conkyrc
+++ b/.conkyrc
@@ -30,16 +30,22 @@ conky.config = {
 };
 
 conky.text = [[
-# TIME AND DATE
+#################
+# TIME AND DATE #
+#################
 ${color #A0B0C0}${font sans-serif:bold:size=10}DATE & TIME ${hr 2}${font}${color}
 ${time %A, %d %B %Y} - ${time %H:%M:%S}
 Uptime: $uptime
 
-# WEATHER
+###########
+# WEATHER #
+###########
 ${color #A0B0C0}${font sans-serif:bold:size=10}WEATHER ${hr 2}${font}${color}
 ${alignc}${execpi 1800 curl "wttr.in/Dunkerque?0T"}${font}
 
-# CPU
+###########
+#   CPU   #
+###########
 ${color #A0B0C0}${font sans-serif:bold:size=10}CPU ${hr 2}${font}${color}
 Average Usage: ${cpu}% ${alignr} ${hwmon 1 temp 1}°C
 ${cpugraph 60,320 A0B0C0 A0B0C0}
@@ -52,12 +58,16 @@ Core 06: ${cpu cpu6}% ${goto 115}Core 07: ${cpu cpu7}% ${goto 230}Core 08: ${cpu
 # NEXT CORE
 Core 09: ${cpu cpu9}% ${goto 115}Core 10: ${cpu cpu10}% ${goto 230}Core 11: ${cpu cpu11}%
 
-# RAM
+###########
+#   RAM   #
+###########
 ${color #A0B0C0}${font sans-serif:bold:size=10}RAM ${hr 2}${font}${color}
 Usage: ${exec echo "scale=2; $(free -m | grep Mem | awk '{print $3}')*1.04858/1000" | bc} Go / ${exec echo "scale=2; $(free -m | grep Mem | awk '{print $2}')*1.04858/1000" | bc} Go - $memperc%
 ${memgraph 60,320 A0B0C0 A0B0C0 }'
 
-# TOP PROCESS
+#####################
+#   TOP PROCESSES   #
+#####################
 ${color #A0B0C0}${font sans-serif:bold:size=10}TOP PROCESSES ${hr 2}${font}${color}
 Name $alignr PID   CPU%   MEM%${font sans-serif:normal:size=10}
 ${top name 1} $alignr ${top pid 1} ${top cpu 1}% ${top mem 1}%
@@ -66,31 +76,39 @@ ${top name 3} $alignr ${top pid 3} ${top cpu 3}% ${top mem 3}%
 ${top name 4} $alignr ${top pid 4} ${top cpu 4}% ${top mem 4}%
 ${top name 5} $alignr ${top pid 5} ${top cpu 5}% ${top mem 5}%
 
-# DISK
+############
+#   DISK   #
+############
 ${color #A0B0C0}${font sans-serif:bold:size=10}DISK ${hr 2}${font}${color}
 Usage: ${fs_used /}/${fs_size /} ${alignr} ${execi 30 smartctl -A /dev/nvme0n1 | grep "Temperature Sensor 1" | awk '{print $4 "°C"}'}
 ${fs_bar 6 /}'
 
-# SWAP
+############
+#   SWAP   #
+############
 ${color #A0B0C0}${font sans-serif:bold:size=10}SWAP ${hr 2}${font}${color}
 Usage: $swap/$swapmax - $swapperc%
 ${swapbar 6 /}
 
-# BATTERY
+###############
+#   BATTERY   #
+###############
 ${color #A0B0C0}${font sans-serif:bold:size=10}BATTERY ${hr 2}${font}${color}
 State: ${battery BAT0}
 Remaining Time: ${battery_time BAT0}
 ${battery_bar 6 BAT0 #505A60}
 
-# Network usage
+###############
+#   NETWORK   #
+###############
 ${color #A0B0C0}${font sans-serif:bold:size=10}NETWORK ${hr 2}${font}${color}
 SSID: ${wireless_essid wlp2s0} ${alignr} Signal: ${wireless_link_qual_perc wlp2s0}%
 Speed Down/Up : ${downspeedf wlp2s0} kB/s ${goto 200} | ${upspeedf wlp2s0} kB/s
 Total Down/Up : ${totaldown wlp2s0} ${goto 200} | ${totalup wlp2s0}
-Top Usage :
-${execpi 10 ~/parse_nethogs.sh}
 
-# System Update
+#####################
+#   SYSTEM UPDATE   #
+#####################
 ${color #A0B0C0}${font sans-serif:bold:size=10}SYSTEM UPDATES ${hr 2}${font}${color}
 ${execpi 3600 ~/check_updates.sh}
 
